EzSwap: README and Dockerfile

--- a/EzSwap/frontend/.env.example
+++ b/EzSwap/frontend/.env.example
@@ -1,2 +1,5 @@
-VITE_NETWORK=
-VITE_FACTORY_ADDRESS=
+VITE_NETWORK=http://127.0.0.1:8545/
+VITE_FACTORY_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+VITE_TOKEN1_ADDRESS=0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+VITE_TOKEN2_ADDRESS=0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0
+VITE_TOKEN3_ADDRESS=0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9
